# RiscoCardioAI

./: .gitignore  README.md  exemplos.py  framinghamscore.py  models_load.py  normalization_map.py  processing_predictions.py  pyproject.toml  regular_expression.py  streamlit_app.py
